# exercism

./: pyproject.toml
acronym/: acronym.py
acronym/.exercism/: metadata.json
hamming/: hamming.py
hamming/.exercism/: metadata.json
hello-world/.exercism/: metadata.json
high-scores/: high_scores.py
high-scores/.exercism/: metadata.json
isogram/: isogram.py
isogram/.exercism/: metadata.json
matrix/: matrix.py
matrix/.exercism/: metadata.json
raindrops/: raindrops.py  raindrops_test.py
raindrops/.exercism/: metadata.json
twelve-days/: twelve_days.py
twelve-days/.exercism/: metadata.json
two-fer/.exercism/: metadata.json
